--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -10,22 +10,28 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.8",
+    "@mui/material": "^5.15.7",
+    "@repo/ui": "*",
+    "formik": "^2.4.5",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@repo/ui": "*"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.4",
+    "@repo/eslint-config": "*",
+    "@repo/tailwind-config": "*",
+    "@repo/typescript-config": "*",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
-    "@repo/eslint-config": "*",
     "postcss": "^8.4.33",
-    "@repo/tailwind-config": "*",
     "tailwindcss": "^3.4.0",
-    "@repo/typescript-config": "*",
     "typescript": "^5.3.3"
   }
 }
