--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^5.15.7",
     "@repo/ui": "*",
     "formik": "^2.4.5",
+    "jose": "^5.2.1",
+    "mongoose": "^8.1.1",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
