feat: create the user table

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,6 +6,8 @@
   ],
   "exports": {
     "./styles.css": "./dist/index.css",
+    "./custom-button": "./src/custom-button.tsx",
+    "./page-header": "./src/page-header.tsx",
     "./sidenav": "./src/sidenav.tsx"
   },
   "license": "MIT",
