feat: create modals for managing users

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,6 +7,7 @@
   "exports": {
     "./styles.css": "./dist/index.css",
     "./custom-button": "./src/custom-button.tsx",
+    "./custom-modal": "./src/custom-modal.tsx",
     "./page-header": "./src/page-header.tsx",
     "./sidenav": "./src/sidenav.tsx"
   },
