--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.7",
     "@repo/ui": "*",
+    "bcryptjs": "^2.4.3",
     "formik": "^2.4.5",
     "jose": "^5.2.1",
     "mongoose": "^8.1.1",
@@ -28,6 +29,7 @@
     "@repo/eslint-config": "*",
     "@repo/tailwind-config": "*",
     "@repo/typescript-config": "*",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
