--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
+  "globalEnv": ["JWT_SECRET_KEY", "NODE_ENV", "DATABASE_URL"],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
