--- a/apps/ggsheets-server/package.json
+++ b/apps/ggsheets-server/package.json
@@ -2,11 +2,9 @@
   "name": "ggsheets-server",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --external:express --external:cors",
-    "start": "node dist/index.js",
-    "type-check": "tsc"
+    "dev": "node index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
