--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,12 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
-  "globalEnv": ["JWT_SECRET_KEY", "NODE_ENV", "DATABASE_URL"],
+  "globalEnv": [
+    "JWT_SECRET_KEY",
+    "NODE_ENV",
+    "DATABASE_URL",
+    "GOOGLE_SHEETS_SERVER_URL"
+  ],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
